add margin in navbar and make sure that manualResult is always up to date

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -47,7 +47,7 @@
                 [participationIdList]="participation?.id"
             ></jhi-programming-assessment-repo-export>
             <a
-                class="ml-2"
+                class="ml-2 mr-5"
                 href="{{ participation.repositoryUrl }}"
                 target="_blank"
                 rel="noopener noreferrer"
