--- a/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/manual-result/programming-assessment-manual-result-in-code-editor.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="result && !isLoading" class="modal-body">
+<div *ngIf="result && !isLoading" class="modal-body mt-2">
     <div *ngIf="isOpenForSubmission" class="alert alert-warning">
         <strong jhiTranslate="artemisApp.result.exerciseStillOpen">Exercise is still open for submissions!</strong>
         <span jhiTranslate="artemisApp.result.studentOverride">
