--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -4,9 +4,7 @@
         <div class="ml-auto d-flex">
             <button class="btn btn-primary jh-create-entity create-exam" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']" [routerLink]="['new']">
                 <fa-icon [icon]="'plus'"></fa-icon>
-                <span class="hidden-sm-down">
-                    Create new Exam
-                </span>
+                <span class="hidden-sm-down"> Create new Exam </span>
             </button>
         </div>
     </div>
