--- a/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
+++ b/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
@@ -68,9 +68,7 @@
                         There is no assessment available yet.
                     </p>
                     <ng-container *ngIf="assessmentResult?.feedbacks?.length > 0">
-                        <p jhiTranslate="artemisApp.modelingSubmission.assessment.instructions">
-                            Select elements in the editor to filter the assessment.
-                        </p>
+                        <p jhiTranslate="artemisApp.modelingSubmission.assessment.instructions">Select elements in the editor to filter the assessment.</p>
                         <table class="table">
                             <thead class="thead-light">
                                 <tr>
