--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -2,9 +2,7 @@
     <div class="card-body">
         <span *ngIf="loadingParticipation">
             <fa-icon [icon]="'circle-notch'" spin="true"></fa-icon>
-            <span jhiTranslate="artemisApp.editor.fetchingParticipation">
-                Your participation is being loaded...
-            </span>
+            <span jhiTranslate="artemisApp.editor.fetchingParticipation"> Your participation is being loaded... </span>
         </span>
         <span *ngIf="participationCouldNotBeFetched">
             <fa-icon [icon]="'times-circle'" class="text-danger"></fa-icon>
