--- a/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
+++ b/src/main/webapp/app/exercises/modeling/participate/modeling-submission.component.html
@@ -99,6 +99,9 @@
             </div>
         </jhi-fullscreen>
         <jhi-complaint-interactions *ngIf="modelingExercise" [exercise]="modelingExercise" [participation]="participation" [result]="result"> </jhi-complaint-interactions>
+        <div class="row" *ngIf="result">
+            <jhi-rating class="mt-2 alert alert-info" [result]="resultForRating"></jhi-rating>
+        </div>
     </div>
     <!--endregion-->
     <!--region Right Panel-->
