--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -1,4 +1,4 @@
-<div class="card ">
+<div class="card">
     <div class="card-header bg-primary text-white">
         <h3 class="card-title">
             <fa-icon [icon]="['far', 'file-alt']"></fa-icon>
@@ -7,21 +7,16 @@
         </h3>
     </div>
     <div class="card-body overflow-auto">
-        <p
-            *ngIf="!selectedFile && !isLoading"
-            id="no-file-selected"
-            class="text-center lead text-muted pt-5"
-            jhiTranslate="artemisApp.editor.selectFile"
-        >
+        <p *ngIf="!selectedFile && !isLoading" id="no-file-selected" class="text-center lead text-muted pt-5" jhiTranslate="artemisApp.editor.selectFile">
             Select a file to get started!
         </p>
         <table>
             <tbody>
-                <tr *ngFor="let lineOfCode of studentCodePerLine, let i = index" id="code-line-{{i + 1}}">
-                    <td class="" [style.width]="'20px'">{{i + 1}}</td>
+                <tr *ngFor="let lineOfCode of studentCodePerLine; let i = index" id="code-line-{{ i + 1 }}">
+                    <td class="" [style.width]="'20px'">{{ i + 1 }}</td>
                     <td class="border-right"></td>
                     <td class="pl-2">
-                        <pre>{{lineOfCode}}</pre>
+                        <pre>{{ lineOfCode }}</pre>
                     </td>
                 </tr>
             </tbody>
