--- a/src/main/webapp/app/exercises/shared/team/teams.component.html
+++ b/src/main/webapp/app/exercises/shared/team/teams.component.html
@@ -109,7 +109,7 @@
 
                 <ngx-datatable-column prop="students" [minWidth]="200" [width]="600">
                     <ng-template ngx-datatable-header-template>
-                        <span class="datatable-header-cell-wrapper" style="cursor: text;">
+                        <span class="datatable-header-cell-wrapper" style="cursor: text">
                             <span class="datatable-header-cell-label bold" jhiTranslate="artemisApp.team.students"> Students </span>
                         </span>
                     </ng-template>
