--- a/src/main/webapp/app/overview/exercise-details/course-exercise-details.component.html
+++ b/src/main/webapp/app/overview/exercise-details/course-exercise-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="exercise">
-    <div class="alert" *ngIf="showWelcomeAlert" [ngClass]="'alert-info'" style="bottom: 11px;">
+    <div class="alert" *ngIf="showWelcomeAlert" [ngClass]="'alert-info'" style="bottom: 11px">
         <div [innerHTML]="'artemisApp.exercise.welcome' | translate"></div>
     </div>
     <!-- HEADER INFORMATION START -->
