--- a/src/main/webapp/app/shared/notification/notification-sidebar/notification-sidebar.component.html
+++ b/src/main/webapp/app/shared/notification/notification-sidebar/notification-sidebar.component.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="loading-spinner text-center mx-3 my-2" style="font-size: large;" *ngIf="loading">
+            <div class="loading-spinner text-center mx-3 my-2" style="font-size: large" *ngIf="loading">
                 <fa-icon [icon]="'circle-notch'" spin="true"></fa-icon>
             </div>
             <small class="all-loaded text-center d-block mx-3 my-2" *ngIf="notifications.length > 0 && notifications.length >= totalNotifications">
