--- a/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
@@ -26,6 +26,18 @@
                 ></jhi-programming-exercise-configure-grading-actions>
             </div>
         </div>
+
+        <div class="tab-bar">
+            <div class="tab-item test-cases" routerLink="test-cases" routerLinkActive="active">
+                <b>Test Cases</b>
+            </div>
+            <div class="tab-item code-analysis" routerLink="code-analysis" routerLinkActive="active">
+                <b>Code Analysis</b>
+            </div>
+        </div>
+
+        <div class="grading-body-container">
+            <div *ngIf="activeTab == 'test-cases'">
         <ngx-datatable
             id="testCaseTable"
             class="bootstrap"
@@ -118,6 +130,12 @@
                 </ng-template>
             </ngx-datatable-column>
         </ngx-datatable>
+            </div>
+            <div *ngIf="activeTab == 'code-analysis'">
+                TODO
+            </div>
+        </div>
+
     </ng-container>
     <ng-template #loadingContainer>
         <div class="d-flex justify-content-center mt-4">
