--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -1,10 +1,11 @@
-<jhi-code-editor-grid #grid (onResize)="onGridResize($event)">
+<jhi-code-editor-grid #grid [isTutorAssessment]="isTutorAssessment" (onResize)="onGridResize($event)">
     <div editorNavbar class="d-flex align-items-center">
         <h4><ng-content select="[editorTitle]"></ng-content></h4>
         <ng-content select="[editorTitleActions]"></ng-content>
         <div class="d-flex align-items-center ml-auto">
             <ng-content select="[editorToolbar]"></ng-content>
             <jhi-code-editor-actions
+                *ngIf="!isTutorAssessment"
                 [buildable]="buildable"
                 [disableActions]="!editable"
                 [unsavedFiles]="unsavedFiles"
@@ -36,15 +37,19 @@
         [annotations]="annotations"
         [commitState]="commitState"
         [editorState]="editorState"
+        [isTutorAssessment]="isTutorAssessment"
         (onFileContentChange)="onFileContentChange($event)"
         (onError)="onError($event)"
     ></jhi-code-editor-ace>
     <jhi-code-editor-instructions *ngIf="showEditorInstructions" editorSidebarRight (onToggleCollapse)="onToggleCollapse($event)" (onError)="onError($event)">
         <ng-content select="[editorSidebar]"></ng-content>
     </jhi-code-editor-instructions>
+    <div *ngIf="isTutorAssessment" editorBottom>
+        <ng-content select="[editorBottom]"></ng-content>
+    </div>
     <jhi-code-editor-build-output
         editorBottomArea
-        *ngIf="buildable"
+        *ngIf="buildable && !isTutorAssessment"
         [participation]="participation"
         (onAnnotations)="onAnnotations($event)"
         (onError)="onError($event)"
