--- a/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
+++ b/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
@@ -18,7 +18,7 @@
     [showEditorInstructions]="showEditorInstructions"
 >
     <span editorTitle>{{ exercise.title }}</span>
-    <div editorToolbar>
+    <div editorToolbar class="d-inline-flex">
         <jhi-code-editor-repository-is-locked *ngIf="repositoryIsLocked" class="mr-3"></jhi-code-editor-repository-is-locked>
         <jhi-updating-result
             *ngIf="participation"
