Changed Max Score into Points, set bonus to 0

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -89,7 +89,7 @@
                             <span jhiTranslate="artemisApp.studentExamDetail.result">Result</span>
                         </th>
                         <th>
-                            <span jhiTranslate="artemisApp.exercise.maxScore">Max Score</span>
+                            <span jhiTranslate="artemisApp.exercise.maxScore">Points</span>
                         </th>
 
                         <th>
