--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -128,7 +128,7 @@
                     <jhi-programming-exercise-lifecycle id="timeline" [exercise]="programmingExercise" [isExamMode]="isExamMode"> </jhi-programming-exercise-lifecycle>
                 </div>
                 <div class="form-group-narrow">
-                    <label class="label-narrow" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Max Score</label>
+                    <label class="label-narrow" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Points</label>
                     <input
                         required
                         type="number"
