--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
@@ -62,7 +62,7 @@
             <span *ngIf="modelingExercise.assessmentDueDateError" class="invalid-feedback">{{ 'artemisApp.exercise.assessmentDueDateError' | translate }}</span>
         </div>
         <div class="form-group-narrow">
-            <label class="form-control-label" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Max Score</label>
+            <label class="form-control-label" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Points</label>
             <input
                 type="number"
                 required
