--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
@@ -42,7 +42,7 @@
                         <span>{{ programmingExercise.buildAndTestStudentSubmissionsAfterDueDate | artemisDate: 'long':true }}</span>
                     </dd>
                 </ng-container>
-                <dt><span jhiTranslate="artemisApp.exercise.maxScore">Max Score</span></dt>
+                <dt><span jhiTranslate="artemisApp.exercise.maxScore">Points</span></dt>
                 <dd>
                     <span>{{ programmingExercise.maxScore }}</span>
                 </dd>
