--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-update.component.html
@@ -61,7 +61,7 @@
             <span *ngIf="textExercise.assessmentDueDateError" class="invalid-feedback">{{ 'artemisApp.exercise.assessmentDueDateError' | translate }}</span>
         </div>
         <div class="form-group">
-            <label class="form-control-label" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Max Score</label>
+            <label class="form-control-label" jhiTranslate="artemisApp.exercise.maxScore" for="field_maxScore">Points</label>
             <input
                 required
                 type="number"
