--- a/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
@@ -61,38 +61,26 @@
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column name="Weight" prop="weight">
-                        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
                             <jhi-table-editable-field
                                 [value]="value"
-                                [canEdit]="!editing"
-                                [isEditing]="editing && editing[0] === filteredTestCases[filteredTestCases.indexOf(row)] && editing[1] === EditableField.WEIGHT"
-                                (onEditStart)="enterEditing(filteredTestCases.indexOf(row), EditableField.WEIGHT)"
-                                (onValueUpdate)="updateEditedField($event)"
-                                (onCancel)="leaveEditingWithoutSaving()"
+                                (onValueUpdate)="updateEditedField($event, row, EditableField.WEIGHT)"
                             ></jhi-table-editable-field>
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column name="Bonus Multiplier" prop="bonusMultiplier">
-                        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
                             <jhi-table-editable-field
                                 [value]="value"
-                                [canEdit]="!editing"
-                                [isEditing]="editing && editing[0] === filteredTestCases[filteredTestCases.indexOf(row)] && editing[1] === EditableField.BONUS_MULTIPLIER"
-                                (onEditStart)="enterEditing(filteredTestCases.indexOf(row), EditableField.BONUS_MULTIPLIER)"
-                                (onValueUpdate)="updateEditedField($event)"
-                                (onCancel)="leaveEditingWithoutSaving()"
+                                (onValueUpdate)="updateEditedField($event, row, EditableField.BONUS_MULTIPLIER)"
                             ></jhi-table-editable-field>
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column name="Bonus Points" prop="bonusPoints">
-                        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
                             <jhi-table-editable-field
                                 [value]="value"
-                                [canEdit]="!editing"
-                                [isEditing]="editing && editing[0] === filteredTestCases[filteredTestCases.indexOf(row)] && editing[1] === EditableField.BONUS_POINTS"
-                                (onEditStart)="enterEditing(filteredTestCases.indexOf(row), EditableField.BONUS_POINTS)"
-                                (onValueUpdate)="updateEditedField($event)"
-                                (onCancel)="leaveEditingWithoutSaving()"
+                                (onValueUpdate)="updateEditedField($event, row, EditableField.BONUS_POINTS)"
                             ></jhi-table-editable-field>
                         </ng-template>
                     </ngx-datatable-column>
@@ -163,13 +151,19 @@
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column name="Penalty" prop="penalty">
-                        <ng-template ngx-datatable-cell-template let-value="value">
-                            {{ value.length }}
+                        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+                            <jhi-table-editable-field
+                                [value]="value"
+                                (onValueUpdate)="updateEditedCategoryField($event, row, EditableField.PENALTY)"
+                            ></jhi-table-editable-field>
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column name="Max Penalty" prop="maxPenalty">
-                        <ng-template ngx-datatable-cell-template let-value="value">
-                            {{ value.length }}
+                        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+                            <jhi-table-editable-field
+                                [value]="value"
+                                (onValueUpdate)="updateEditedCategoryField($event, row, EditableField.MAX_PENALTY)"
+                            ></jhi-table-editable-field>
                         </ng-template>
                     </ngx-datatable-column>
                 </ngx-datatable>
