--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -12,13 +12,20 @@
         </p>
         <table>
             <tbody>
-                <tr *ngFor="let lineOfCode of studentCodePerLine; let i = index" id="code-line-{{ i + 1 }}">
+            <ng-container *ngFor="let lineOfCode of studentCodePerLine; let i = index" >
+                <tr id="code-line-{{ i + 1 }}">
                     <td class="" [style.width]="'20px'">{{ i + 1 }}</td>
                     <td class="border-right"></td>
                     <td class="pl-2">
                         <pre>{{ lineOfCode }}</pre>
                     </td>
                 </tr>
+                <tr *ngIf="false" >
+                    <td colspan="3">
+                        <jhi-code-editor-tutor-assessment-inline-feedback></jhi-code-editor-tutor-assessment-inline-feedback>
+                    </td>
+                </tr>
+            </ng-container>
             </tbody>
         </table>
     </div>
