--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -12,20 +12,25 @@
         </p>
         <table>
             <tbody>
-            <ng-container *ngFor="let lineOfCode of studentCodePerLine; let i = index" >
-                <tr id="code-line-{{ i + 1 }}">
-                    <td class="" [style.width]="'20px'">{{ i + 1 }}</td>
-                    <td class="border-right"></td>
-                    <td class="pl-2">
-                        <pre>{{ lineOfCode }}</pre>
-                    </td>
-                </tr>
-                <tr *ngIf="false" >
-                    <td colspan="3">
-                        <jhi-code-editor-tutor-assessment-inline-feedback></jhi-code-editor-tutor-assessment-inline-feedback>
-                    </td>
-                </tr>
-            </ng-container>
+                <ng-container *ngFor="let lineOfCode of studentCodePerLine; let i = index">
+                    <tr id="code-line-{{ i + 1 }}" (mouseover)="lineOfCodeHovered = i" (mouseleave)="lineOfCodeHovered = null">
+                        <td [style.width]="'20px'">
+                            <div class="btn-inline-comment" [class.btn-inline-comment-hover]="lineOfCodeHovered === i">
+                                <fa-icon [icon]="'plus-square'" size="lg"></fa-icon>
+                            </div>
+                        </td>
+                        <td class="" [style.width]="'20px'">{{ i + 1 }}</td>
+                        <td class="border-right"></td>
+                        <td class="pl-2">
+                            <pre>{{ lineOfCode }}</pre>
+                        </td>
+                    </tr>
+                    <tr *ngIf="false">
+                        <td colspan="4">
+                            <jhi-code-editor-tutor-assessment-inline-feedback></jhi-code-editor-tutor-assessment-inline-feedback>
+                        </td>
+                    </tr>
+                </ng-container>
             </tbody>
         </table>
     </div>
