on icon hover the icon size increases

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.scss
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.scss
@@ -17,4 +17,9 @@ table {
 
 .btn-inline-comment-hover {
     display: block;
+
+    fa-icon:hover  {
+        font-size: 15px;
+        transition: font-size 0.35s ease;
+    }
 }
