--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -15,7 +15,7 @@
                 <ng-container *ngFor="let lineOfCode of studentCodePerLine; let i = index">
                     <tr id="code-line-{{ i + 1 }}" (mouseover)="lineOfCodeHovered = i" (mouseleave)="lineOfCodeHovered = null">
                         <td [style.width]="'20px'">
-                            <div class="btn-inline-comment" [class.btn-inline-comment-hover]="lineOfCodeHovered === i">
+                            <div class="btn-inline-comment" [class.btn-inline-comment-hover]="lineOfCodeHovered === i" (click)="openInlineFeedback(i)">
                                 <fa-icon [icon]="'plus-square'" size="lg"></fa-icon>
                             </div>
                         </td>
@@ -25,7 +25,7 @@
                             <pre>{{ lineOfCode }}</pre>
                         </td>
                     </tr>
-                    <tr *ngIf="false">
+                    <tr *ngIf="lineOfCodeForInlineComment === i && toggleInlineComment">
                         <td colspan="4">
                             <jhi-code-editor-tutor-assessment-inline-feedback></jhi-code-editor-tutor-assessment-inline-feedback>
                         </td>
