--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -5,16 +5,16 @@
     </div>
     <div class="form-group col-2 text-right">
         <label jhiTranslate="artemisApp.exercise.score"></label>
-        <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly"/>
+        <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly" />
     </div>
     <div *ngIf="readOnly" class="form-group col-2 text-right">
-        <button  type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm mr-1">
+        <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm mr-1">
             <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
         </button>
     </div>
 </div>
 <div *ngIf="!readOnly">
-    <button type="button" class="btn btn-secondary btn-sm">
+    <button type="button" class="btn btn-secondary btn-sm" (click)="cancelFeedback()">
         <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
     </button>
     <button type="submit" [disabled]="feedback.detailText ? feedback.detailText.trim().length === 0 : true" class="btn btn-primary btn-sm" (click)="updateFeedback()">
