--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.scss
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.scss
@@ -8,18 +8,27 @@ pre {
 }
 table {
     font-size: 11px;
+
+    tr:hover .btn-inline-comment {
+        display: block;
+        position: relative;
+
+        fa-icon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        fa-icon:hover {
+            font-size: 15px;
+            transition: font-size 0.35s ease;
+        }
+    }
 }
 
 .btn-inline-comment {
     display: none;
     color: #3e8acc; // btn-primary color
-}
-
-.btn-inline-comment-hover {
-    display: block;
-
-    fa-icon:hover {
-        font-size: 15px;
-        transition: font-size 0.35s ease;
-    }
+    height: 16px;
 }
