add line widgets

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
@@ -8,6 +8,9 @@
     </div>
 
     <div class="card-body code-editor-ace__content">
+        <div #lineWidgets>
+            <ng-content select="[lineWidget]"></ng-content>
+        </div>
         <ace-editor
             #editor
             id="ace-code-editor"
