--- a/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.scss
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.scss
@@ -11,6 +11,21 @@ Ace Editor
         flex: 1 1 auto;
         &__editor {
             flex: 1 1 auto;
+
+            .ace_gutter-cell {
+                position: relative;
+
+                .gutter-icon {
+                    position: absolute;
+                    top: 50%;
+                    right: 0;
+                    transform: translate(-50%, -50%);
+                }
+            }
+
+            .ace_line {
+                pointer-events: all;
+            }
         }
         &__no-selected {
             justify-self: center;
