--- a/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/grading/programming-exercise-configure-grading.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="tab-bar">
+        <div class="tab-bar" *ngIf="exercise.staticCodeAnalysisEnabled">
             <div class="tab-item test-cases" (click)="selectTab('test-cases')" [ngClass]="activeTab == 'test-cases' ? 'active' : ''">
                 <b>Test Cases</b>
             </div>
@@ -108,7 +108,7 @@
                     </ngx-datatable-column>
                 </ngx-datatable>
             </div>
-            <div *ngIf="activeTab == 'code-analysis'">
+            <div *ngIf="activeTab == 'code-analysis' && exercise.staticCodeAnalysisEnabled">
                 <ngx-datatable
                     id="codeAnalysisTable"
                     class="bootstrap"
